# edge-log-pipeline

./: .bazelproject  .bazelversion  .gitignore  LICENSE  MODULE.bazel  README.md
app/: BUILD.bazel
app/include/app/: logger.h  signals.h
app/src/: logger.cc  main.cc  signals.cc
infra/observability/: .env.example  compose.yaml  setup.sh
infra/observability/alloy/: config.alloy
infra/observability/grafana/dashboards/: app_logs.json
infra/observability/grafana/provisioning/dashboards/: provider.yaml
infra/observability/loki/: config.yaml
